# igniter

./: build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/io/github/trojan_gfw/igniter/: BuildConfig.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
